Added basic unit testing

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
        }
     ],
     "require": {
-        "sabre/amf": "*"
+        "sabre/amf": "*",
+        "phpunit/phpunit": "3.7.*"
     },
     "autoload": {
         "psr-0": {
